# neotolis-game-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: publish-web-portal.yml  sandbox-size.yml  size-report.yml  test-web-debug.yml  test-web-release.yml  test-win-debug.yml  test-win-release.yml  web-debug.yml  web-release.yml  win-debug.yml  win-release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
ci/baselines/: qa_failfast_policy.json
ci/schemas/: quality-gate-report.schema.json
ci/scripts/: check-linker-flags.sh  quality-gate-report.sh  run-format-check.sh
ci/workflows/: size-report.yml  web-debug.yml  web-release.yml  win-debug.yml  win-release.yml
cmake/: NTArtifacts.cmake  NTFailfastOptions.cmake  NTSizeReport.cmake
cmake/presets/: CMakePresets.json
cmake/toolchains/: clang-cl.cmake  emscripten.cmake
docs/: ci-guidelines.md  feature-modules.md  onboarding.md  release-runbook.md  requirements.md  size-budget.md
docs/contrib/: warnings.md
engine/: CMakeLists.txt
engine/core/: nt_engine.c  nt_engine.h
engine/features/sample/: nt_feature_sample.c  nt_feature_sample.h
engine/platform/web/: nt_platform_web.c  nt_platform_web.h  nt_wasm_noexcept_stub.c
engine/platform/win/: nt_platform_win.c  nt_platform_win.h
engine/render/: glfw3w_patch.js  glfw3webgpu.c  glfw3webgpu.h  render.c  render.h
reports/size/: README.md  dashboard.js  history-chart.js  index.json  report.css  report.html  update.py  validators.py
reports/size/lib/: chart.min.js
reports/size/sandbox/wasm/debug/: index.html  index.json  report.txt
reports/size/sandbox/wasm/release/: index.html  index.json  report.txt
reports/size/sandbox/windows/debug/: index.json  report.txt
reports/size/sandbox/windows/release/: index.json  report.txt
reports/size/tests/: history-chart-smoke.md
scripts/: build-portal-preview.sh  clang_tidy_filter.py  open-size-dashboard.ps1  serve-sandbox.ps1  setup-pre-commit-hooks.sh  size_report.sh
scripts/portal/: prepare-portal.js
specs/001-init-cmake-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-init-cmake-structure/checklists/: requirements.md
specs/001-init-cmake-structure/contracts/: build-presets.openapi.yaml
specs/003-add-size-reports/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-size-reports/checklists/: requirements.md
specs/003-add-size-reports/contracts/: size-reports.openapi.yaml
specs/004-add-history-chart/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-add-history-chart/checklists/: requirements.md
specs/004-add-history-chart/contracts/: history-data.schema.json
specs/005-publish-web-report/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-publish-web-report/checklists/: requirements.md
specs/005-publish-web-report/contracts/: portal.openapi.yaml
specs/006-enforce-failfast-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-enforce-failfast-quality/checklists/: requirements.md
specs/006-enforce-failfast-quality/contracts/: quality-gate.openapi.yaml
specs/008-add-gltf-dep/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-add-gltf-dep/checklists/: requirements.md
specs/008-add-gltf-dep/contracts/: openapi.yaml
testbeds/sandbox/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/ci/: test_clang_tidy_gate.sh  test_warning_gate.cmake
tests/fixtures/: warning_violation.c
tests/fixtures/clang_tidy/: null_deref.c
tests/microbench/: CMakeLists.txt  failfast_policy_stub.c  test_frame_timing.c
tests/size/: CMakeLists.txt  test_update_cli.py  test_update_missing_baseline.py
tests/size/fixtures/sandbox_wasm_debug/: index.html
tests/size/manual/: portal_access.md  portal_metrics.md  report_dashboard.md
tests/size/scripts/: verify_size_report.py
tests/unit/: CMakeLists.txt  test_engine_lifecycle.c  test_feature_sample.c
web/portal/: .npmignore  index.html  package.json  styles.css
web/portal/scripts/: freshness.js
